--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ svg {
 	width: 320px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 20px;
 }
 
 p, h1 {
@@ -23,4 +24,18 @@ p, h1 {
 
 h1 {
 	color: #fd1c27;
+}
+
+#grid {
+	height: 240px;
+	width: 240px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.blocks {
+	height: 20px;
+	width: 20px;
+	background-color: red;
+	display: inline-block;
 }
