--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ h1 {
 .blocks {
 	height: 20px;
 	width: 20px;
-	background-color: red;
 	display: inline-block;
 	margin-top: -2px;
 	margin-bottom: -2px;
+	background-color: #D8D8D8;
 }
